# memprop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: memprop.hpp  signal_interface.hpp
include/memprop/: memprop.hpp  signal_interface.hpp
include/sigslot/: signal.hpp
tests/: tests.cpp
